From now on only used for notes / trying out

--- a/Saving_Remosaicing.ipynb
+++ b/Saving_Remosaicing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "8409d9a5-5c31-43a6-9e3a-99d35268b3d2",
    "metadata": {},
    "outputs": [],
@@ -29,6 +29,7 @@
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import geopandas as gpd\n",
     "\n",
     "from sklearn.metrics import multilabel_confusion_matrix\n",
     "\n",
@@ -298,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "b493a2d7-7d64-4c78-af11-8daf8c108719",
    "metadata": {},
    "outputs": [],
@@ -321,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "2542d7f3-6fdf-44f1-bf55-a8e3642f746a",
    "metadata": {},
    "outputs": [],
@@ -334,49 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "2d52a0fe-7e2f-408b-8dea-88b91ea97ca2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1716"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_files.shape[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "55dd80cd-e2d2-43a7-8280-38e816d2e74d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'E:/W_Katrin/Kigali/Raster/tiles/predicted_m17_1\\\\testing_0005.jpg'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_files[\"mask\"].iloc[5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "61fac313-d29a-4d0a-80d5-2042924b1a60",
    "metadata": {},
    "outputs": [],
@@ -388,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "f36d35f6-0e47-4384-8eac-40b18a8f7fe4",
    "metadata": {},
    "outputs": [
@@ -420,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "0f775250-48ab-4a37-a1d2-8d4666b9cc26",
    "metadata": {},
    "outputs": [
@@ -448,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "id": "d694fc09-9297-40ec-b7dd-7f2fd4d91972",
    "metadata": {},
    "outputs": [],
@@ -464,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "id": "afe3a84f-bf88-4b20-a1a2-f2311e99d544",
    "metadata": {},
    "outputs": [
@@ -608,7 +567,7 @@
        "[1716 rows x 4 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,120 +583,198 @@
    "source": [
     "## Mosaic ---- NOTHING WORKS YET!!\n",
     "1) Load Mask files\n",
-    "2) Add X and Y as coordinates\n",
+    "2) Get Coordinates of original file's upper left corner (---> point) \n",
+    "2) Loop through mask files, create world files for each mask file by: \n",
+    "    georef_x + (0.4*X)\n",
+    "    georef_y + (0.4*Y)\n",
+    "    save in World-File for each mask_tile\n",
     "3) Merge / Mosaic "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "5a642154-b4fb-49a5-8202-9680f883c291",
+   "execution_count": 77,
+   "id": "98336763-4927-40af-9ac7-adaf77b9cfd4",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "shape",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [41]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m mask_predicted \u001b[38;5;241m=\u001b[39m Image\u001b[38;5;241m.\u001b[39mopen(df_files[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmask\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m0\u001b[39m])\n\u001b[1;32m----> 2\u001b[0m \u001b[43mmask_predicted\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m\n",
-      "File \u001b[1;32mE:\\W_Katrin\\miniconda3\\envs\\tue_dl2\\lib\\site-packages\\PIL\\Image.py:519\u001b[0m, in \u001b[0;36mImage.__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m    512\u001b[0m     warnings\u001b[38;5;241m.\u001b[39mwarn(\n\u001b[0;32m    513\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mImage categories are deprecated and will be removed in Pillow 10 \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    514\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m(2023-07-01). Use is_animated instead.\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    515\u001b[0m         \u001b[38;5;167;01mDeprecationWarning\u001b[39;00m,\n\u001b[0;32m    516\u001b[0m         stacklevel\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m,\n\u001b[0;32m    517\u001b[0m     )\n\u001b[0;32m    518\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_category\n\u001b[1;32m--> 519\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(name)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: shape"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    POINT (173723.362 9789230.702)\n",
+      "Name: geometry, dtype: geometry\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(173723.36172185623, 9789230.701895246)"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "mask_predicted = Image.open(df_files[\"mask\"].iloc[0])\n"
+    "pt_file = \"E:/W_Katrin/Kigali/Raster/2015_Pleiades_Kigali_subset_ReferencePointUL.shp\"\n",
+    "point = gpd.read_file(pt_file)\n",
+    "x_coord = point[\"geometry\"].x[0]\n",
+    "print(point[\"geometry\"])\n",
+    "y_coord = point[\"geometry\"].y[0]\n",
+    "x_coord, y_coord"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "b29547c4-fddd-4153-befc-5e4687db3f18",
+   "execution_count": 60,
+   "id": "50c267df-d508-4dbe-a35f-fb1fa84e432c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mask_predicted = gdal.Open(df_files[\"mask\"].iloc[0])\n",
-    "type(mask_predicted)\n",
-    "\n",
-    "ulx, xres, xskew, uly, yskew, yres = mask_predicted.GetGeoTransform()\n"
+    "res = 0.4963 # in meters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "f185df72-48e3-4209-aebe-2b64ec9cbb34",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import rasterio\n",
-    "from rasterio.warp import reproject\n",
-    "raster = rasterio.open(df_files[\"mask\"].iloc[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "id": "7127036f-4466-4dd6-9286-518c34d47ca3",
+   "execution_count": 29,
+   "id": "9c983ce1-3b6d-4978-ace8-78ffbd70e4ec",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Invalid source",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [71]\u001b[0m, in \u001b[0;36m<cell line: 7>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m dst_transform \u001b[38;5;241m=\u001b[39m rasterio\u001b[38;5;241m.\u001b[39mtransform\u001b[38;5;241m.\u001b[39mfrom_origin(\u001b[38;5;28mint\u001b[39m(df_files[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mX\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m2\u001b[39m]), \u001b[38;5;28mint\u001b[39m(df_files[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mY\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m2\u001b[39m]), \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m      6\u001b[0m destination \u001b[38;5;241m=\u001b[39m dataset\n\u001b[1;32m----> 7\u001b[0m \u001b[43mreproject\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdataset\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdestination\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msrc_transform\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43msrc_transform\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdst_transform\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mdst_transform\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mE:\\W_Katrin\\miniconda3\\envs\\tue_dl2\\lib\\site-packages\\rasterio\\env.py:387\u001b[0m, in \u001b[0;36mensure_env.<locals>.wrapper\u001b[1;34m(*args, **kwds)\u001b[0m\n\u001b[0;32m    385\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    386\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m Env\u001b[38;5;241m.\u001b[39mfrom_defaults():\n\u001b[1;32m--> 387\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m f(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwds)\n",
-      "File \u001b[1;32mE:\\W_Katrin\\miniconda3\\envs\\tue_dl2\\lib\\site-packages\\rasterio\\env.py:612\u001b[0m, in \u001b[0;36mrequire_gdal_version.<locals>.decorator.<locals>.wrapper\u001b[1;34m(*args, **kwds)\u001b[0m\n\u001b[0;32m    606\u001b[0m         \u001b[38;5;28;01melif\u001b[39;00m full_kwds[param] \u001b[38;5;129;01min\u001b[39;00m values:\n\u001b[0;32m    607\u001b[0m             \u001b[38;5;28;01mraise\u001b[39;00m GDALVersionError(\n\u001b[0;32m    608\u001b[0m                 \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mparameter \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{0}\u001b[39;00m\u001b[38;5;124m=\u001b[39m\u001b[38;5;132;01m{1}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m requires \u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m    609\u001b[0m                 \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGDAL \u001b[39m\u001b[38;5;132;01m{2}\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;132;01m{3}\u001b[39;00m\u001b[38;5;132;01m{4}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\n\u001b[0;32m    610\u001b[0m                     param, full_kwds[param], inequality, version, reason))\n\u001b[1;32m--> 612\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m f(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwds)\n",
-      "File \u001b[1;32mE:\\W_Katrin\\miniconda3\\envs\\tue_dl2\\lib\\site-packages\\rasterio\\warp.py:368\u001b[0m, in \u001b[0;36mreproject\u001b[1;34m(source, destination, src_transform, gcps, rpcs, src_crs, src_nodata, dst_transform, dst_crs, dst_nodata, dst_resolution, src_alpha, dst_alpha, resampling, num_threads, init_dest_nodata, warp_mem_limit, **kwargs)\u001b[0m\n\u001b[0;32m    364\u001b[0m         destination \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mempty((\u001b[38;5;28mint\u001b[39m(dst_count), \u001b[38;5;28mint\u001b[39m(dst_height), \u001b[38;5;28mint\u001b[39m(dst_width)),\n\u001b[0;32m    365\u001b[0m                                dtype\u001b[38;5;241m=\u001b[39msource\u001b[38;5;241m.\u001b[39mdtype)\n\u001b[0;32m    367\u001b[0m \u001b[38;5;66;03m# Call the function in our extension module.\u001b[39;00m\n\u001b[1;32m--> 368\u001b[0m _reproject(\n\u001b[0;32m    369\u001b[0m     source, destination, src_transform\u001b[38;5;241m=\u001b[39msrc_transform, gcps\u001b[38;5;241m=\u001b[39mgcps, rpcs\u001b[38;5;241m=\u001b[39mrpcs,\n\u001b[0;32m    370\u001b[0m     src_crs\u001b[38;5;241m=\u001b[39msrc_crs, src_nodata\u001b[38;5;241m=\u001b[39msrc_nodata, dst_transform\u001b[38;5;241m=\u001b[39mdst_transform,\n\u001b[0;32m    371\u001b[0m     dst_crs\u001b[38;5;241m=\u001b[39mdst_crs, dst_nodata\u001b[38;5;241m=\u001b[39mdst_nodata, dst_alpha\u001b[38;5;241m=\u001b[39mdst_alpha,\n\u001b[0;32m    372\u001b[0m     src_alpha\u001b[38;5;241m=\u001b[39msrc_alpha, resampling\u001b[38;5;241m=\u001b[39mresampling,\n\u001b[0;32m    373\u001b[0m     init_dest_nodata\u001b[38;5;241m=\u001b[39minit_dest_nodata, num_threads\u001b[38;5;241m=\u001b[39mnum_threads,\n\u001b[0;32m    374\u001b[0m     warp_mem_limit\u001b[38;5;241m=\u001b[39mwarp_mem_limit, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m    376\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m destination, dst_transform\n",
-      "File \u001b[1;32mrasterio\\_warp.pyx:411\u001b[0m, in \u001b[0;36mrasterio._warp._reproject\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mrasterio\\_warp.pyx:405\u001b[0m, in \u001b[0;36mrasterio._warp._reproject\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: Invalid source"
-     ]
+     "data": {
+      "text/plain": [
+       "0    E:/W_Katrin/Kigali/Raster/tiles/predicted_m17_...\n",
+       "1    E:/W_Katrin/Kigali/Raster/tiles/predicted_m17_...\n",
+       "2    E:/W_Katrin/Kigali/Raster/tiles/predicted_m17_...\n",
+       "3    E:/W_Katrin/Kigali/Raster/tiles/predicted_m17_...\n",
+       "4    E:/W_Katrin/Kigali/Raster/tiles/predicted_m17_...\n",
+       "Name: mask, dtype: object"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset = rasterio.open(df_files[\"mask\"].iloc[2])\n",
-    "\n",
-    "src_transform = dataset.transform\n",
-    "dst_transform = rasterio.transform.from_origin(int(df_files[\"X\"].iloc[2]), int(df_files[\"Y\"].iloc[2]), 1, 1)\n",
-    "\n",
-    "destination = dataset\n",
-    "reproject(dataset, destination, src_transform = src_transform, dst_transform = dst_transform)"
+    "df_files[\"mask\"].head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "02a635ac-896b-4575-9ec9-3303af7c2253",
+   "execution_count": 58,
+   "id": "22c854e0-7819-4efb-b4c0-8b313dbf2670",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Affine' object has no attribute 'bounds'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [64]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mraster_\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbounds\u001b[49m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Affine' object has no attribute 'bounds'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "testing_0000\n",
+      "E:/W_Katrin/Kigali/Raster/tiles/predicted_m17_1\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'E:/W_Katrin/Kigali/Raster/tiles/predicted_m17_1\\\\testing_0000.jgw'"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "raster_.bounds"
+    "mask = df_files[\"mask\"].iloc[0].split('\\\\')[1].split('.')[0]\n",
+    "print(mask)\n",
+    "directory = df_files[\"mask\"].iloc[0].split('\\\\')[0]\n",
+    "print(directory)\n",
+    "os.path.join(directory, mask +'.jgw')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8619e6e3-13ef-4658-8451-06a6f7b887ee",
+   "execution_count": 88,
+   "id": "11fbeec4-42e9-4244-b325-46e8a06136ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = open(os.path.join(directory,'test.jgw'), \"w\")\n",
+    "f.write('{pixel_size}\\n'.format(pixel_size = res))\n",
+    "f.write('0.0\\n') #rotation\n",
+    "f.write('0.0\\n') #rotation\n",
+    "f.write('{easting}\\n'.format(easting = (x_coord + (res*int(df_files[\"X\"].iloc[1])))))\n",
+    "f.write('{northing}\\n'.format(northing = (y_coord + (res*int(df_files[\"Y\"].iloc[1])))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "1fb6b49e-84e7-4a7b-afde-87458dcec5e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(int(df_files[\"X\"].iloc[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "6762a345-29cc-4721-942c-e41752258458",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def create_worldfiles(dataframe, res, point_path):\n",
+    "    point = gpd.read_file(point_path)\n",
+    "    x_coord = point[\"geometry\"].x[0]\n",
+    "    y_coord = point[\"geometry\"].y[0]\n",
+    "    for i in range(len(dataframe)): \n",
+    "        directory = dataframe[\"mask\"].iloc[i].split('\\\\')[0]\n",
+    "        mask_str = dataframe[\"mask\"].iloc[i].split('\\\\')[1].split('.')[0]\n",
+    "        f = open(os.path.join(directory, mask_str + '.jgw'), \"w\")\n",
+    "        f.write('{pixel_size}\\n'.format(pixel_size = res)) #pixel size x\n",
+    "        f.write('{pixel_size}\\n'.format(pixel_size = res)) #pixel size y\n",
+    "        f.write('0.0\\n') #rotation\n",
+    "        f.write('0.0\\n') #rotation\n",
+    "        f.write('{easting}\\n'.format(easting = (x_coord + (res*int(dataframe[\"X\"].iloc[i]))))) #location x\n",
+    "        f.write('{northing}\\n'.format(northing = (y_coord + (res*int(dataframe[\"Y\"].iloc[i])))))#location y\n",
+    "        f.close()  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "631b6313-6941-4ec5-96bf-7eae2fbdebc7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pt_file = \"E:/W_Katrin/Kigali/Raster/2015_Pleiades_Kigali_subset_ReferencePointUL.shp\"\n",
+    "create_worldfiles(dataframe = df_files, res =  0.4963, point_path = pt_file)"
+   ]
   }
  ],
  "metadata": {
