clean github repo

--- a/00_Model_Eval_Vis.ipynb
+++ b/00_Model_Eval_Vis.ipynb
@@ -64,19 +64,12 @@
     "import glob\n",
     "import os\n",
     "import re\n",
-    "import datetime\n",
-    "from PIL import Image\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.metrics import multilabel_confusion_matrix\n",
-    "from hyperopt import hp\n",
-    "from hyperopt import fmin, pyll, tpe, hp, STATUS_OK, Trials\n",
-    "import pickle\n",
     "import time\n",
-    "import seaborn as sns\n",
     "from matplotlib import pyplot as plt\n",
-    "from matplotlib.collections import PolyCollection\n",
-    "from mpl_toolkits.mplot3d import Axes3D"
+    "from matplotlib.collections import PolyCollection"
    ]
   },
   {
