--- a/02_Tiling_Predicting_Mosaicing.ipynb
+++ b/02_Tiling_Predicting_Mosaicing.ipynb
@@ -25,7 +25,7 @@
    "id": "6cb6798c-1ea6-4dbd-a347-01b1c4af17d6",
    "metadata": {},
    "source": [
-    "![title](E:/W_Katrin/1_Documents/Worrkflow.png)"
+    "![title](E:/W_Katrin/InnovationLab/Workflow.png)"
    ]
   },
   {
@@ -40,7 +40,6 @@
     "from PIL import Image\n",
     "from osgeo import gdal\n",
     "import numpy as np\n",
-    "import rasterio\n",
     "from osgeo import osr\n",
     "import geopandas as gpd\n",
     "from shapely.geometry import Point\n",
@@ -50,11 +49,9 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import warnings\n",
-    "\n",
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
     "from tensorflow.keras import backend as K\n",
-    "\n",
     "import imageio"
    ]
   },
@@ -284,8 +281,8 @@
     "    \n",
     "        Parameters: \n",
     "            img (array): orginal image\n",
-    "            imin (float, tuple): tuple of length 2, representing percentiles, in decimal numbers\n",
-    "            imax (bool): if True, the percentile min and max are calculated for every band\n",
+    "            imin (float): lower boundary value of percentile\n",
+    "            imax (float): upper boundary value of percentile\n",
     "            target_size (int, tuple): tuple of length 2, respresenting min and max values for desired rescaled image\n",
     "            target_type (np.type): desired datatype\n",
     "        \n",
